<resources>
    <string name="app_name">PhoneRuler</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">Input Dimensions</string>
    <string name="second_fragment_label">Start Measure</string>
    <string name="measure_fragment_label">Measure</string>
    <string name="end_measure_fragment_label">End Measure</string>
    <string name="next">Next</string>
    <string name="previous">Reset Input Data</string>
    <string name="start_measuring">Start</string>
    <string name="stop_measuring">Stop</string>
    <string name="measure_again">Repeat</string>

    <string name="Input_phone_height">Input phone height: </string>
    <string name="Input_phone_width">Input phone width: </string>
    <string name="Input_phone_thickness">Input phone thickness: </string>
    <string name="zero_measure">0</string>
    <string name="angle_x_text">X angle:</string>
    <string name="angle_y_text">Y angle:</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>