<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".StartMeasuring">

    <TextView
        android:id="@+id/angle_y_input"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="200dp"
        android:text="@string/zero_measure"
        android:textSize="130px"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.689"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/angle_y_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/angle_y_text"
        android:textSize="130px"
        app:layout_constraintBottom_toBottomOf="@+id/angle_y_input"
        app:layout_constraintEnd_toStartOf="@+id/angle_y_input"
        app:layout_constraintHorizontal_bias="0.504"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/angle_y_input"
        app:layout_constraintVertical_bias="1.0" />

    <TextView
        android:id="@+id/angle_x_input"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="344dp"
        android:text="@string/zero_measure"
        android:textSize="130px"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.689"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/angle_x_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/angle_x_text"
        android:textSize="130px"
        app:layout_constraintBottom_toBottomOf="@+id/angle_x_input"
        app:layout_constraintEnd_toStartOf="@+id/angle_x_input"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/angle_x_input"
        app:layout_constraintVertical_bias="1.0" />

    <Button
        android:id="@+id/button_second"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/previous"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.8"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/angle_x_input"
        app:layout_constraintVertical_bias="0.2" />

    <Button
        android:id="@+id/start_measure"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:layout_marginStart="70dp"
        android:layout_marginTop="270dp"
        android:layout_marginEnd="80dp"
        android:text="@string/start_measuring"
        app:layout_constraintBottom_toBottomOf="@+id/button_second"
        app:layout_constraintEnd_toStartOf="@+id/button_second"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/button_second"
        app:layout_constraintVertical_bias="1.0" />
</androidx.constraintlayout.widget.ConstraintLayout>