<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".EndMeasuring">

    <!-- TODO: Update blank fragment layout -->
    <TextView
        android:id="@+id/Measurement"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:text="@string/hello_blank_fragment"
        android:visibility="visible" />

    <Button
        android:id="@+id/come_back_after_measurement"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="250dp"
        android:text="@string/previous"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.813"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/repeat_button"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:layout_marginStart="70dp"
        android:layout_marginTop="270dp"
        android:layout_marginEnd="80dp"
        android:text="@string/measure_again"
        app:layout_constraintBottom_toBottomOf="@+id/come_back_after_measurement"
        app:layout_constraintEnd_toStartOf="@+id/come_back_after_measurement"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/come_back_after_measurement"
        app:layout_constraintVertical_bias="1.0" />

</androidx.constraintlayout.widget.ConstraintLayout>